--- a/src/presentation/common/Style/style.css
+++ b/src/presentation/common/Style/style.css
@@ -843,7 +843,17 @@ ul {
 
 .project-modal {
   padding: 5px !important;
+  
+ 
 }
+.display{
+  display: flex !important;
+}
+.display ul:first-child{
+  width:30%;
+
+}
+
 
 .project-modal .projects-members {
   margin-top: -12px;
