--- a/src/presentation/common/Style/style.css
+++ b/src/presentation/common/Style/style.css
@@ -2843,6 +2843,27 @@ html[dir="rtl"] .ant-menu-vertical .ant-menu-submenu-title {
   padding-left: 10px;
 }
 
+.display {
+  display: flex;
+}
+.display ul:first-child {
+  width: 30%;
+}
+.display .varHeight .label{
+  margin-bottom:14px;
+  font-size: 14px;
+  line-height: 19px;
+  color: #9299B8;
+
+}
+.display .varHeight .value{
+  font-size: 14px;
+  line-height: 19px;
+  color: #535768;
+  margin-bottom:14px;
+}
+
+
 li.active > .display {
   display: block;
 }
